k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-webapp
  namespace: default
  labels:
    app: ai-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-webapp
  template:
    metadata:
      labels:
        app: ai-webapp
    spec:
      containers:
        - name: ai-webapp
          image: 533267035494.dkr.ecr.ap-south-1.amazonaws.com/ai-webapp:latest  # tag replaced dynamically in Jenkins
          ports:
            - containerPort: 8081
